# Aircraft-Control-And-Simulation

./: README.md  dynamic_simulation.ipynb  dynamic_simulation.py  lateral_validation.ipynb  linearize.py  longitudinal_validation.ipynb  pyproject.toml  trim.py
devel/: .catkin  setup.sh
devel/lib/cubesat_pkg/: hello_cpp_e
devel/lib/pkgconfig/: cubesat_pkg.pc  gazebo_tutorials.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc
devel/share/cubesat_pkg/cmake/: cubesat_pkgConfig.cmake
devel/share/gazebo_tutorials/cmake/: gazebo_tutorialsConfig.cmake
devel/share/rrbot_control/cmake/: rrbot_controlConfig.cmake
devel/share/rrbot_description/cmake/: rrbot_descriptionConfig.cmake
devel/share/rrbot_gazebo/cmake/: rrbot_gazeboConfig.cmake
src/cubesat_pkg/: CMakeLists.txt  README.md
src/cubesat_pkg/config/: blabo.yaml  cubesat_ros_control_params.yaml
src/cubesat_pkg/launch/: cubesat_control.launch  cubesat_rqt.launch  cubesat_rviz.launch  cubesat_world.launch
src/cubesat_pkg/rviz/: cubesat.rviz
src/cubesat_pkg/src/: hello_cpp_f.cpp
src/cubesat_pkg/urdf/: cubesat.urdf.xacro  cubesat_gazebo.xacro  cubesat_include.xacro  cubesat_rdr_control.xacro
